# checkins-playground

./: .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yaml  mise.toml
api/: .env.example  README.md  alembic.ini  hello.py  pyproject.toml  scratch.ipynb
api/alembic/: env.py
api/alembic/versions/: ffe2cbe476ed_init_tables.py
api/src/: database.py  main.py
api/src/models/: checkin.py
api/src/routes/: checkins.py
api/src/schemas/: checkin.py
api/src/scripts/: load_checkins.py
api/src/services/: checkins.py
ui/: .prettierrc  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
ui/checkins/: package-lock.json
ui/src/: app.css
ui/src/lib/: api.ts
ui/src/lib/components/ui/data-table/: flex-render.svelte
ui/src/lib/components/ui/select/: index.ts  select-content.svelte  select-group-heading.svelte  select-item.svelte  select-scroll-down-button.svelte  select-scroll-up-button.svelte  select-separator.svelte  select-trigger.svelte
ui/src/lib/components/ui/separator/: separator.svelte
ui/src/lib/components/ui/table/: table-body.svelte  table-caption.svelte  table-cell.svelte  table-footer.svelte  table-head.svelte  table-header.svelte  table-row.svelte  table.svelte
ui/src/routes/: +layout.svelte  +page.svelte  Header.svelte
ui/src/routes/about/: +page.svelte
ui/src/routes/payments/: DataTable.svelte  columns.ts  data-table-email-button.svelte  data-table.svelte
user_stories/: user_story.md
