[project]
name = "checkins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.37",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "I","E","F","W"
]
