[project]
name = "checkins"
version = "0.1.0"
description = "Daily checkins API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "fastapi[standard]>=0.115.7",
    "pydantic>=2.10.6",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.37",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "I","E","F","W"
]
