[project]
name = "checkins"
version = "0.1.0"
description = "Daily checkins API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "fastapi[standard]>=0.115.7",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.37",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.9.3",
]

[tool.ruff]
line-length = 79
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "I","E","F","W"
]
